# mega

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Controls.cpp  Controls.h  LICENSE  README.md  ResourceManager.cpp  ResourceManager.h  application.cpp  application.h  cmake-format.yaml  controls.cpp  controls.h  gltf-debug-renderer.cpp  gltf-debug-renderer.h  gpu-scene.cpp  gpu-scene.h  implementations.cpp  main.cpp  resource-manager.cpp  resource-manager.h  ui-manager.cpp  ui-manager.h  utils.cmake  vckpg.json  webgpu-gltf-utils.cpp  webgpu-gltf-utils.h  webgpu-raii.hpp  webgpu-std-utils.hpp  webgpu-utils.cpp  webgpu-utils.h
.github/workflows/: cmake.yml
1.getting_started/1.1.create_window/: CMakeLists.txt  main.cpp
imgui/: CMakeLists.txt
resources/: shader.wgsl
resources/shaders/: shader.wgsl
webgpu/: webgpu-raii.hpp  webgpu.hpp
